// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountsService createAccount should create a new account 1`] = `
{
  "balanceInCryptoAsset": 1,
  "balanceInReferenceCurrency": 0,
  "cryptoAsset": "BTC",
  "id": 10,
  "referenceCurrency": "USD",
}
`;

exports[`AccountsService getAllAccounts should return all accounts 1`] = `
[
  {
    "balanceInCryptoAsset": 1,
    "balanceInReferenceCurrency": 0,
    "cryptoAsset": "BTC",
    "id": 11,
    "referenceCurrency": "USD",
  },
]
`;

exports[`AccountsService mapAccountToDto should map an account to a CryptoAccountDto 1`] = `
CryptoAccountDto {
  "balanceInCryptoAsset": 1,
  "balanceInReferenceCurrency": 10,
  "cryptoAsset": "BTC",
  "id": 1,
  "referenceCurrency": "USD",
}
`;

exports[`AccountsService mapAccountsToDtos should map an array of accounts to an array of CryptoAccountDtos 1`] = `
[
  CryptoAccountDto {
    "balanceInCryptoAsset": 1,
    "balanceInReferenceCurrency": 10,
    "cryptoAsset": "BTC",
    "id": 1,
    "referenceCurrency": "USD",
  },
  CryptoAccountDto {
    "balanceInCryptoAsset": 2,
    "balanceInReferenceCurrency": 20,
    "cryptoAsset": "ETH",
    "id": 2,
    "referenceCurrency": "USD",
  },
]
`;
